# SmartRoute-AI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES_EXPLAINED.md  Dockerfile  Dockerfile.api  Dockerfile.streamlit  PROJECT_INTERVIEW_PREP copy.md  README.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  template.py  validate_bm25.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 68f612722729_create_query_logs_table.py  68f612722729_initial_schema.py
api/: main.py
config/: config.yaml  models.yaml  routing.yaml
dashboard/: app.py
data/costs/: usage.db
data/embeddings/: chroma.sqlite3
data/embeddings/a5838d43-6c43-4716-951b-569363665db4/: index_metadata.pickle
data/training/: queries.jsonl
k8s/: api-deployment.yaml
models/classifiers/: complexity_classifier.pkl
openspec/changes/archive/2026-07-21-enterprise-hardening/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-21-enterprise-hardening/specs/database-migrations/: spec.md
openspec/changes/archive/2026-07-21-enterprise-hardening/specs/resilient-api-retry/: spec.md
openspec/changes/archive/2026-07-21-enterprise-hardening/specs/scalable-auth-jwt/: spec.md
openspec/changes/archive/2026-07-21-enterprise-hardening/specs/semantic-caching/: spec.md
openspec/changes/archive/2026-07-21-improve-ml-router/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-21-improve-ml-router/specs/ml-router-enhancements/: spec.md
openspec/changes/archive/2026-07-23-optimize-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-23-optimize-pipeline/specs/budget-fixes/: spec.md
openspec/changes/archive/2026-07-23-optimize-pipeline/specs/multi-provider-fallback/: spec.md
openspec/changes/archive/2026-07-23-optimize-pipeline/specs/pipeline-performance/: spec.md
openspec/changes/archive/2026-07-24-database-migrations-and-observability/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-24-database-migrations-and-observability/specs/ci-cd/: spec.md
openspec/changes/archive/2026-07-24-database-migrations-and-observability/specs/database-migrations/: spec.md
openspec/changes/archive/2026-07-24-database-migrations-and-observability/specs/observability/: spec.md
openspec/changes/archive/2026-07-24-refactor-enterprise-overengineering/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-24-refactor-pipeline-models/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-24-refactor-pipeline-models/specs/pipeline-refactoring/: spec.md
openspec/changes/fix-structural-debt/: design.md  proposal.md  tasks.md
openspec/changes/fix-structural-debt/specs/structural-debt/: spec.md
openspec/changes/structural-debt-fixes/: design.md  proposal.md  tasks.md
openspec/changes/structural-debt-fixes/specs/internal-refactoring/: spec.md
openspec/specs/ci-cd/: spec.md
openspec/specs/database-migrations/: spec.md
openspec/specs/ml-router-enhancements/: spec.md
openspec/specs/observability/: spec.md
openspec/specs/pipeline-refactoring/: spec.md
openspec/specs/resilient-api-retry/: spec.md
openspec/specs/scalable-auth-jwt/: spec.md
openspec/specs/semantic-caching/: spec.md
scripts/: build_vectordb.py  evaluate.py  generate_training_data.py  run_eval.py  train_classifier.py
src/: __init__.py  constants.py
src/SmartRouteAI/api/: main.py
src/SmartRouteAI/cost/: reporter.py
src/SmartRouteAI/models/: api_model.py  local_model.py  model_manager.py
src/SmartRouteAI/pipeline/: inference.py
src/SmartRouteAI/retrieval/: retriever.py
src/SmartRouteAI/routing/: classifier.py  features.py  router.py
src/SmartRouteAI/utils/: config.py  helpers.py  logging.py
src/core/: dependencies.py
src/cost/: __init__.py  budget.py  tracker.py
src/evaluation/: __init__.py  ragas_eval.py
src/memory/: __init__.py  conversation.py
src/models/: __init__.py  api_model.py  base.py  groq_model.py  local_model.py  model_manager.py  openrouter_model.py
src/pipeline/: __init__.py  inference.py
src/retrieval/: __init__.py  cache.py  chunking.py  embedder.py  indexer.py  reranker.py  retriever.py  semantic_cache.py  vector_store.py
src/routing/: __init__.py  base_classifier.py  classifier.py  features.py  heuristic_classifier.py  llm_classifier.py  router.py
src/utils/: __init__.py  alerting.py  circuit_breaker.py  config.py  guardrails.py  helpers.py  logger.py  security.py  tracing.py
tests/: conftest.py  test_api.py  test_batch_run.py  test_cost_tracker.py  test_memory.py  test_reranker.py  test_retrieval_cache.py  test_router.py  test_semantic_cache.py
