[tool.poetry]
name = "SmartRouteAI"
version = "0.1.0"
description = "Cost-optimized LLM routing system with RAG, model switching, and cost tracking."
authors = ["Javith Naseem <javithnaseem.j@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

# ----------------------
# Core ML / Embeddings
# ----------------------
sentence-transformers = ">=2.3.0"

# ----------------------
# LLM Provider (Groq - free tier)
# ----------------------
groq = ">=0.4.0"

# ----------------------
# LangChain + Vector Store
# ----------------------
langchain = ">=0.1.0"
langchain-community = ">=0.0.20"
langchain-text-splitters = ">=0.0.1"
chromadb = ">=0.4.22"
rank-bm25 = ">=0.2.2"  # BM25 for hybrid search

# ----------------------
# Document Parsing (Optional - install for enhanced PDF support)
# ----------------------
pypdf = ">=3.17.0"  # Basic PDF parsing
# docling = ">=2.0.0"  # Optional: Enhanced PDF/DOCX parsing (install separately)
# langchain-docling = ">=0.1.0"  # Optional: Native LangChain integration

# ----------------------
# FastAPI
# ----------------------
fastapi = ">=0.109.0"
uvicorn = { version = ">=0.27.0", extras = ["standard"] }
pydantic = ">=2.5.0"
slowapi = ">=0.1.9"
pydantic-settings = ">=2.1.0"

# ----------------------
# Dashboard
# ----------------------
streamlit = ">=1.31.0"
plotly = ">=5.18.0"
pandas = ">=2.1.4"

# ----------------------
# Classical ML (Routing Classifier)
# ----------------------
scikit-learn = ">=1.4.0"
lightgbm = ">=4.0.0"
numpy = ">=1.26.0"
joblib = ">=1.3.0"

# ----------------------
# Database
# ----------------------
sqlalchemy = ">=2.0.25"

# ----------------------
# Utilities
# ----------------------
python-dotenv = ">=1.0.0"
pyyaml = ">=6.0.1"
tqdm = ">=4.66.1"

# ----------------------
# Optional: Evaluation (install separately if needed)
# ----------------------
# ragas = ">=0.1.0"
# datasets = ">=2.16.0"





[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=4.1.0"
httpx = ">=0.26.0"
black = ">=24.1.0"
isort = ">=5.13.0"
flake8 = ">=7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
