[project]
name = "smartroute-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.22",
    "fastapi>=0.109.0",
    "groq>=0.4.0",
    "joblib>=1.3.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-text-splitters>=0.0.1",
    "lightgbm>=4.0.0",
    "numpy>=1.26.0",
    "pandas>=2.1.4",
    "plotly>=5.18.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pypdf>=3.17.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=2.3.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.25",
    "streamlit>=1.31.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.66.1",
    "uvicorn[standard]>=0.27.0",
]
