[project]
name = "smartroute-ai"
version = "2.1.0"
description = "Cost-Optimized LLM Inference with Smart Routing and RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # LLM & Routing
    "groq>=0.9.0",
    "sentence-transformers>=2.3.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.4.0",
    "tiktoken>=0.7.0",
    "joblib>=1.3.0",
    # RAG & Retrieval
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-text-splitters>=0.0.1",
    "qdrant-client>=1.9.0",
    "langchain-qdrant>=0.1.0",
    "rank-bm25>=0.2.2",
    "pypdf>=3.17.0",
    # API & Web
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "slowapi>=0.1.9",
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
    "pandas>=2.1.4",
    # Database
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    # Cache
    "redis>=5.0.0",
    # Utilities
    "pyyaml>=6.0.1",
    "tqdm>=4.66.1",
    "numpy>=1.26.0",
    # Observability
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "fakeredis>=2.21.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-redis",
    "types-PyYAML",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
